# SDL3_MVP

./: .gitignore  CMakeLists.txt
docs/: HDR_LINUX_TROUBLESHOOTING.md  RENDERDOC_CAPTURE.md
plans/: sdl3_mvp_design.md  slang_integration_plan.md
shaders/: triangle.frag.hlsl  triangle.slang  triangle.vert.hlsl
src/: main.cpp  shader_module.cpp  shader_module.hpp
